--- a/app/services.html
+++ b/app/services.html
@@ -50,19 +50,21 @@
             </div>
             
             <div class="body">
-                <h1>Welcome to Reliable Appraisal</h1>
-                <p>Reliable Appraisal has been servicing the real estate, financial, and mortgage trade in the Greater Toronto Area (GTA) since 1993. Our reliability, integrity, speed, and quality of service is legendary. We are committed to maintain this superior level of service for all our existing and future customers.</p>
-                <h1>Expert Appraisal with Speedy Delivery</h1>
-                <p>Our team of professional appraisers is at your service any time. As a Reliable Appraisal client, you have immediate access to decades of expert local appraisal experience. Appraisers at Reliable have vast experience in appraising commercial, industrial, residential, condominium, multiplex, undeveloped land, new construction and  investment properties. </br>Our commitment to service ensures that all appraisals are performed to the highest trade quality in the shortest possible time. To service clients with very urgent needs, we are one of the first appraisal firms in the area to introduce Express Expedited Appraisal Service.</p>
-                <h1>Best Reliability and Dependability in the Industry</h1>
-                <p>If you are not yet a Reliable Appraisal client, feel free to browse around this website. We will show you why we are always number one when it comes to real estate appraisal needs. If you have any questions or comments, do not hesitate to contact us. One of our friendly appraisers or staff will be glad to assist you.</p>
+<div class="services">
+	<h1>Services We Provide</h1>
+	<ul class="service-list">
+		<li>Mortgage Financing</li>
+		<li>Power Of Sales</li>
+		<li>Capital Gains</li>
+		<li>Employee Relocations</li>
+		<li>Estate Settlment</li>
+		<li>Asset Divisions</li>
+		<li>Assessment Reviews</li>
+		<li>Pre-Purchase and Pre-Sale</li>
+	</ul>
+</div>
             </div>
 
-            <div class="rightbar">
-                <p>Member</p>
-                <img class="aic" src="./img/aic.gif">
-                <img class="oaic" src="./img/oaic.gif">
-            </div>
         </div>
         <div class="footer">
             <div class="top"> </div>
